style: fix on share page category spacing

--- a/styles/sass/partials/_share.scss
+++ b/styles/sass/partials/_share.scss
@@ -167,6 +167,7 @@ html.share {
                     li {
                         margin-top: 3px;
                         margin: 7px;
+                        margin-right: 9px;
                         margin-left: 0;
 
                         a {
