--- a/styles/styles.css
+++ b/styles/styles.css
@@ -440,6 +440,7 @@ html.share main .share-categories ul li a:hover {
   html.share main .share-categories ul li {
     margin-top: 3px;
     margin: 7px;
+    margin-right: 9px;
     margin-left: 0;
   }
   html.share main .share-categories ul li a {
